--- a/templates/foros/comentario.html
+++ b/templates/foros/comentario.html
@@ -1,5 +1,16 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
+  <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
+  <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
+  <script type="text/javascript" src="/files/js/less.min.js"></script>
+
+<style type="text/css">
+#id_comentario{
+	width:480px;
+	height:150px;
+}
+</style>
 <script type="text/javascript">
 $(document).ready(function() {
 	$("#boton-preguntar").click(function() {	
@@ -17,12 +28,12 @@ $(document).ready(function() {
 });
 </script>
 
-
-<h2>Agregue su comentario</h2>
-
+<br>
+<center><h6>Agregue su comentario</h6></center>
+<hr>
 <form id="commentform"action="." method="POST">{% csrf_token %}
-        	{{form.as_p}}
-	 <input id="boton-preguntar" type="submit" value="Responder">
+        	{{form.comentario}}
+	 <input class="btn btn-success" id="boton-preguntar" type="submit" value="Comentar">
         
  </form>
 
