--- a/templates/contrapartes/mensaje.html
+++ b/templates/contrapartes/mensaje.html
@@ -3,7 +3,7 @@
 {% block contenido %}
 mensajes<br>
 {% for a in mensaje %}
-	{{a.mensaje}}, {% for b in a.user.all %} {{b}} {% endfor %}
+	{{a.mensaje|safe}}, {% for b in a.user.all %} {{b}} {% endfor %}
 	<hr>
 {% endfor %}
 
