--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -71,7 +71,7 @@
             <div class="divisor-barra-admin"></div>
             <a href="/foros/privado/documento" class="documentosiconadmin">Documentos</a>
             <div class="divisor-barra-admin"></div>
-            <a href="#" class="multimediaiconadmin">Multimedia</a>
+            <a href="/foros/privado/multimedia_fotos" class="multimediaiconadmin">Multimedia</a>
             <div class="divisor-barra-admin"></div>
             <div class="clean"></div>
           </div>
