empezando seccion de actividades

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -498,7 +498,7 @@ form hr{margin-top:10px; margin-bottom:10px;}
 
 #barra-admin a{
 	height:100px;
-	width:120px;
+	width:112px;
 	display: block;
 	float:left;
 	text-align:center;
@@ -529,6 +529,12 @@ form hr{margin-top:10px; margin-bottom:10px;}
 .documentosiconadmin{
 	background:url(/files/img/admindocumentos.png) no-repeat center center;
 }
+
+.adminmensaje{
+	background:url(/files/img/adminmensaje.png) no-repeat center center;
+
+}
+
 
 .divisor-barra-admin{
 	background:url(/files/img/divisoradmin.png) no-repeat bottom right;
@@ -609,3 +615,11 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	width:290px;
 
 }
+
+/////Actividades
+
+#id_evento{
+	width:400px;
+}
+
+
