--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -18,7 +18,7 @@
   <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
   <script type="text/javascript">
     $(function() {
-    $("#id_apertura , #id_cierre , #id_fecha_skype , #id_memoria").datepicker({ 
+    $("#id_apertura , #id_cierre , #id_fecha_skype , #id_memoria, #id_inicio, #id_final").datepicker({ 
         dateFormat: 'dd/mm/yy', 
         dayNamesMin: ['Do', 'Lu', 'Ma', 'Mi', 'Ju', 'Vi', 'Sa'], 
         monthNames: ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'],
@@ -65,7 +65,7 @@
             <div class="divisor-barra-admin"></div>
             <a href="/foros/privado/nota" class="notaiconadmin">Mis Notas</a>
             <div class="divisor-barra-admin"></div>
-            <a href="/foros/privado/agenda" class="agendaiconadmin">Mi Agenda</a>
+            <a href="/agendas/calendario" class="agendaiconadmin">Mi Agenda</a>
             <div class="divisor-barra-admin"></div>
             <a href="/foros" class="foroiconadmin">Foro</a>
             <div class="divisor-barra-admin"></div>
@@ -73,6 +73,7 @@
             <div class="divisor-barra-admin"></div>
             <a href="/foros/privado/multimedia_fotos" class="multimediaiconadmin">Multimedia</a>
             <div class="divisor-barra-admin"></div>
+            <a href="/foros/privado/multimedia_fotos" class="adminmensaje">Mensajes</a>
             <div class="clean"></div>
           </div>
       </div>
