--- a/templates/agendas/crear_agenda.html
+++ b/templates/agendas/crear_agenda.html
@@ -1,15 +1,89 @@
-{% extends "base.html" %}
+{% extends "baseadmin.html" %}
 
 {% block extra_js %}
 <link href="/files/css/jquery.autocomplete.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="/files/js/autocompletejs/jquery.autocomplete.js"></script>
+<script type="text/javascript">
+        $(function() {
+                $elem = $('#actionbuttons');
+                
+                // detectar el scroll de la ventana y fixear el elemento
+            $(window).bind('scroll', function() {
+                var windowTop = $(this).scrollTop();
+                if(windowTop>=240){
+                        $elem.addClass('fixed');
+                }else{
+                        // volver elemento a su lugar
+                        $elem.removeClass('fixed');
+                }
+            }); 
+
+            //para definir el alto de las tabs igual a su contenido
+            var alto = $('.tab-content').height();
+            $('.nav-tab-media').height(alto);
+        });
+</script>
 {% endblock %}
 
 {% block contenido %}
-	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
-		{{ form.media }}
-		{{form.as_p}}
-		{{form1.as_p}}
-		<input id="boton-preguntar" type="submit" value="Guardar">
-	</form>
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        CREAR ACTIVIDAD
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
+<div class="row">
+        <div class="container">
+                <div class="row">
+                    <form enctype="multipart/form-data" action="." method="post">{% csrf_token %}
+                        {{ form.media }}
+                        <div class="span9">
+                                <div class="well">
+                                        {%if form.errors%}
+                                                <div class="alert alert-error"><b>Favor corregir los siguientes errores</b><br>{{form.errors}}</div>
+                                        {%endif%}
+                                          {{form.as_p}}
+                                        <div class="tabbable tabs-left">
+                                                <ul class="nav nav-tabs nav-tab-media">
+                                                  <li class="active"><a  href="#documentos" data-toggle="tab"><i class="icon-file"></i>Documentos</a></li>
+                                                </ul>
+                                                <div class="tab-content tab-media">
+                                                  <div class="tab-pane active" id="documentos">
+                                                        <span class="label label-warning">DODCUMENTOS</span><hr>
+                                                        {{ form1.management_form }}
+                                                        {% for docu in form1 %}
+                                                        <div class="media-form-inline">
+                                                                {{docu.label_tag}}
+                                                                {{docu}}
+                                                        </div>
+                                                        {% endfor %}
+                                                        <hr>
+                                                  </div>
+                                                </div>
+                                                <div class="clean"></div> 
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="span3">
+                                <div class="alert "><i class="icon-info-sign"></i>
+                                  Formulario para la creacion de actividades
+                                </div>
+                                <div class="well" id="actionbuttons">
+                                <input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
+                                <a href="/agendas/calendario" class="btn btn-large">Cerrar</a>
+                                </div>
+                        </div>
+                        </form>
+                </div>
+        </div>
+</div>
 {% endblock %}
