--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                       <a href="/notas" class="blogmenu">Notas</a>
                       <a href="/acerca" class="acercamenu">Acerca de</a>
                       <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
-                      <a href="/agendas" class="eventomenu">Eventos</a>
+                      <a href="/agendas/eventos" class="eventomenu">Eventos</a>
                       <div class="clean"></div>
                   </div>
               </div>
