--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -622,4 +622,16 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	width:400px;
 }
 
+.evento{
+	padding:10px;
+	background:#fff;
+	.rounded-corners(5px);
+	.box-shadow(0px, 2px, 3px, #b3b3b3);
+	margin-bottom:15px;
+	border-bottom:#e9e9e9 15px solid;
+
+	.fechas,.titulo-medio{
+		margin-bottom:10px;
+	}
+}
 
