--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -635,3 +635,11 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	}
 }
 
+.botones-evento{
+	float:right;
+}
+
+.fc-event-inner:hover{
+	cursor:pointer !important;
+	.opacidad(0.8);
+}
