--- a/templates/agendas/agenda_list_full.html
+++ b/templates/agendas/agenda_list_full.html
@@ -117,6 +117,7 @@
 		{%endif%}
 		<div class="row">
 			<div class="span9">
+				que cosas es esto
 				<div id='calendar'></div>
 			</div>
 			<div class="span3">
