--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -643,3 +643,10 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	cursor:pointer !important;
 	.opacidad(0.8);
 }
+
+.leyenda{
+	width:10px;
+	height:20px;
+	float: left;
+	margin-right:20px;
+}
