--- a/templates/contrapartes/crear_contraparte.html
+++ b/templates/contrapartes/crear_contraparte.html
@@ -1,4 +1,4 @@
-{% extends "baseinterna.html" %}
+{% extends "baseadmin.html" %}
 {%block extra_js%}
 <script type="text/javascript">
     $(document).ready(function(){
