--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -1,4 +1,4 @@
-{% extends "baseinterna.html" %}
+{% extends "baseadmin.html" %}
 {% block extra_js%}
 <script type="text/javascript" src="/files/js/jquery.bxSlider.min.js"></script>
 <script type="text/javascript">
