eventos unicode fix

--- a/templates/agendas/crear_agenda.html
+++ b/templates/agendas/crear_agenda.html
@@ -58,7 +58,7 @@
                                                 </ul>
                                                 <div class="tab-content tab-media">
                                                   <div class="tab-pane active" id="documentos">
-                                                        <span class="label label-warning">DODCUMENTOS</span><hr>
+                                                        <span class="label label-warning">DOCUMENTOS</span><hr>
                                                         {{ form1.management_form }}
                                                         {% for docu in form1 %}
                                                         <div class="media-form-inline">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="span3">
                                 <div class="alert "><i class="icon-info-sign"></i>
-                                  Formulario para la creacion de actividades
+                                  Formulario para la creación de actividades
                                 </div>
                                 <div class="well" id="actionbuttons">
                                 <input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
