agregando el color de la organizacion en el form

--- a/templates/contrapartes/crear_contraparte.html
+++ b/templates/contrapartes/crear_contraparte.html
@@ -103,6 +103,9 @@
 					<label class="control-label">{{form.generalidades.label}}</label>
 					{{form.generalidades}}
 					<hr>
+					<label class="control-label">{{form.font_color.label}}</label>
+					{{form.font_color}}
+					<hr>
 				</div>
 			</div>
 			<div class="span3">
