fix contraparte en notas

--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -74,7 +74,7 @@ $(".alert").alert();
             </div>
             <div class="span5">
                 
-                <a class="contraparte-object btn " href="/contrapartes/{{objects.contraparte.id}}"><img src="{{object.contraparte.logo.url_70x60}}">{{object.contraparte.nombre}}</a>
+                <a class="contraparte-object btn " href="/contrapartes/{{objects.contraparte.id}}"><img src="{{object.contraparte.logo.url_70x60}}">{{object.user.userprofile.contraparte.nombre}}</a>
             </div>
         </div>
         <div class="row ">
