--- a/templates/notas/notas_list.html
+++ b/templates/notas/notas_list.html
@@ -44,7 +44,7 @@
 	             {%endfor%}
 				</div>
 				<div class="span9">
-						<div class="extrainfo">{{nota.fecha}}  |  {{nota.pais.nombre}} | {{nota.contraparte.nombre}}</div>
+						<div class="extrainfo">{{nota.fecha}}  |  {{nota.pais.nombre}} | {{nota.user.userprofile.contraparte.nombre}}</div>
 						<a href="{{nota.get_absolute_url}}" class="titulo-medio">{{nota.titulo}}</a><br>
 						{{nota.contenido|safe|truncatewords_html:50}} <br><br>
 						<a href="/notas/{{nota.id}}" class="btn btn-success btn-mini">Leer mas</a>
