fix pais en las notas

--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -70,7 +70,7 @@ $(".alert").alert();
                   </div>
                 {% endif %}
                <h1 class="titulo-grande">{{object.titulo}}</h1>
-               <div class="extrainfofull">{{object.fecha}}  |  {{object.pais.nombre}}</div>
+               <div class="extrainfofull">{{object.fecha}}  |  {{object.user.userprofile.contraparte.pais.nombre}}</div>
             </div>
             <div class="span5">
                 
